Alterar path DataSet

--- a/PG-Rank.ipynb
+++ b/PG-Rank.ipynb
@@ -166,7 +166,7 @@
         "      for score in scores:\n",
         "          f.write(\"%s\\n\" % score)\n",
         "\n",
-        "    process = subprocess.Popen(['/usr/bin/perl', 'Eval-Score-4.0-train.pl', 'test.txt', 'rank', 'info', '0'], stdout=subprocess.PIPE)\n",
+        "    process = subprocess.Popen(['/usr/bin/perl', 'Eval-Score-4.0-train.pl', 'MQ2008/test.txt', 'rank', 'info', '0'], stdout=subprocess.PIPE)\n",
         "    metrics = process.stdout.readline().split(b';')\n",
         "    ndcg = np.float64(metrics[1])\n",
         "    map =  np.float64(metrics[0])\n",
@@ -199,7 +199,7 @@
         "    for score in scores:\n",
         "        f.write(\"%s\\n\" % score)\n",
         "\n",
-        "  process = subprocess.Popen(['/usr/bin/perl', 'Eval-Score-4.0-train.pl', 'train.txt', 'rank', 'info', '0'], stdout=subprocess.PIPE)\n",
+        "  process = subprocess.Popen(['/usr/bin/perl', 'Eval-Score-4.0-train.pl', 'MQ2008/train.txt', 'rank', 'info', '0'], stdout=subprocess.PIPE)\n",
         "  metrics = process.stdout.readline().split(b';')\n",
         "  ndcg = np.float64(metrics[1])\n",
         "  map =  np.float64(metrics[0])\n",
@@ -220,7 +220,7 @@
         "      for score in scores:\n",
         "          f.write(\"%s\\n\" % score)\n",
         "    \n",
-        "    subprocess.call(['/usr/bin/perl', 'Eval-Score-4.0.pl', 'test.txt', 'rank', 'info', '0'])\n",
+        "    subprocess.call(['/usr/bin/perl', 'Eval-Score-4.0.pl', 'MQ2008/test.txt', 'rank', 'info', '0'])\n",
         "    with open(\"info\", \"r\") as fi:\n",
         "      with open(\"/content/drive/My Drive/Colab Notebooks/LETOR/result.txt\", \"a\") as fr:\n",
         "        fr.write(\"\\nIndividuo: \" + str(ind)+\"\\n\")\n",
