Alterar path DataSet

--- a/PG-Rank.ipynb
+++ b/PG-Rank.ipynb
@@ -107,13 +107,13 @@
         "id": "v0nQBGEq6Whg"
       },
       "source": [
-        "with open('/content/drive/My Drive/Colab Notebooks/LETOR/MQ2008/Fold1/train.txt') as trainfile:\n",
+        "with open('MQ2008/train.txt') as trainfile:\n",
         "    TrainX, Trainy, Trainqids, _ = pyltr.data.letor.read_dataset(trainfile)\n",
         "\n",
-        "with open('/content/drive/My Drive/Colab Notebooks/LETOR/MQ2008/Fold1/test.txt') as testfile:\n",
+        "with open('MQ2008/test.txt') as testfile:\n",
         "    TestX, Testy, Testqids, _ = pyltr.data.letor.read_dataset(testfile)\n",
         "\n",
-        "#with open('/content/drive/My Drive/Colab Notebooks/LETOR/MQ2007/Fold1/vali.txt') as valifile:\n",
+        "#with open('MQ2008/vali.txt') as valifile:\n",
         "#    ValiX, Valiy, Valiqids, _ = pyltr.data.letor.read_dataset(valifile)"
       ],
       "execution_count": 4,
