--- a/PG-Rank.ipynb
+++ b/PG-Rank.ipynb
@@ -134,7 +134,7 @@
         "  true_label['1'] = \"Indiferente\"\n",
         "  true_label['2'] = \"Relevant\"  \n",
         "  \n",
-        "  with open(\"/content/drive/My Drive/Colab Notebooks/LETOR/result.txt\", \"a\") as fr:\n",
+        "  with open(\"result.txt\", \"a\") as fr:\n",
         "    last_query_id = dataset_query[0]\n",
         "    for row, query_id in enumerate(dataset_query):\n",
         "      if (last_query_id != query_id):\n",
@@ -222,7 +222,7 @@
         "    \n",
         "    subprocess.call(['/usr/bin/perl', 'Eval-Score-4.0.pl', 'MQ2008/test.txt', 'rank', 'info', '0'])\n",
         "    with open(\"info\", \"r\") as fi:\n",
-        "      with open(\"/content/drive/My Drive/Colab Notebooks/LETOR/result.txt\", \"a\") as fr:\n",
+        "      with open(\"result.txt\", \"a\") as fr:\n",
         "        fr.write(\"\\nIndividuo: \" + str(ind)+\"\\n\")\n",
         "        fr.write(\"Função de ranqueamento: \" + str(individual)+\"\\n\\n\")\n",
         "        fr.write(fi.read() + \"\\n\\n\\n\")\n",
@@ -388,7 +388,7 @@
         "list_best_average = np.zeros(NUM_ITERATION, dtype=np.float64)\n",
         "all_best_ind = []\n",
         "for i in range(NUM_ITERATION):\n",
-        "  with open(\"/content/drive/My Drive/Colab Notebooks/LETOR/result.txt\", \"a\") as fr:\n",
+        "  with open(\"result.txt\", \"a\") as fr:\n",
         "    fr.write(\"\\n\\n\\n>>> Num. Iteration: \" + str(i+1)+\"\\n\")\n",
         "    fr.write(str(datetime.datetime.now()) + \"\\n\\n\" )\n",
         "  print(\">>> Num. Iteration: \" + str(i+1))\n",
@@ -398,7 +398,7 @@
         "  print(\">>> Init Test\")\n",
         "  calc_metrics_test(pop, TestX)\n",
         "  all_best_ind.append(get_best_of_test(pop, TestX))\n",
-        "with open(\"/content/drive/My Drive/Colab Notebooks/LETOR/result.txt\", \"a\") as fr:\n",
+        "with open(\"result.txt\", \"a\") as fr:\n",
         "  fr.write(\"\\n\" + str(datetime.datetime.now()))\n",
         "print_rank_documents(pop, TestX, Testy, Testqids)"
       ],
